# litelitedram

./: .gitignore  .gitmodules  README.md  setup.cfg
examples/: barefsm.py  barefsmsim.py  deca.py  fsm.py  sim.py
litelitedram/: __init__.py  ddr3.py  ddr3_model.py  utils.py
