[metadata]
name = litelitedram
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = Minimal DRAM controllers for LiteX
version = attr: litelitedram.__version__
url = https://github.com/jevinskie/litelitedram


[options]
python_requires = ~=3.6
packages = find:
zip_safe = True

[build-system]
requires = ["setuptools"]
